organize js code into file, custom 404, responsive verification, theme verification, remove themesI dont want to maintain

--- a/404.html
+++ b/404.html
@@ -1,5 +1,12 @@
 ---
-layout: default
+permalink: /404.html
+layout: error
 ---
 
-Page Not Found.
+<h1 style="text-align: center;">Oh no! That's a {{ site.tag_text }}</h1>
+
+<img src="assets/images/logo.png" class="is-circle-384 center rotate"/>
+
+<h1 style="text-align: center;">Whoopsie!</h1>
+
+<h3 class="is-family-monospace" style="text-align: center;"><a href="./">Home</a></h3>
