--- a/404.html
+++ b/404.html
@@ -3,10 +3,12 @@ permalink: /404.html
 layout: error
 ---
 
-<h1 style="text-align: center;">Oh no! That's a {{ site.tag_text }}</h1>
+<h1 style="text-align: center;">Oh no!</h1>
 
-<img src="assets/images/logo.png" class="is-circle-384 center rotate"/>
+<h2 class="yolo-text-primary-color" style="text-align: center;">That's a {{ site.tag_text }}</h2>
 
-<h1 style="text-align: center;">Whoopsie!</h1>
+<img src="assets/images/site/logo.png" class="is-circle-384 center rotate"/>
+
+<h2 class="yolo-text-primary-color" style="text-align: center;">Whoopsie!</h2>
 
 <h3 class="is-family-monospace" style="text-align: center;"><a href="./">Home</a></h3>
