--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ layout: error
 
 <h1 style="text-align: center;">Oh no!</h1>
 
-<h2 class="yolo-text-primary-color" style="text-align: center;">That's a {{ site.tag_text }}</h2>
+<h2 class="yolo-text-primary-color" style="text-align: center;">That's a {{ site.name }}</h2>
 
 <img src="assets/images/site/logo.png" class="is-circle-384 center rotate"/>
 
